--- a/Main/bottom/bullet_screen.html
+++ b/Main/bottom/bullet_screen.html
@@ -17,7 +17,9 @@
           padding:20px;
           font-size:24px;
           font-weight:bold;
+          position:relative;
           }
+          .mp4{width:70%;height:502px; position:absolute;z-index:3;top:0;left:0;}
 			h1{color:white;text-shadow:2px 2px 5px #000; text-align:center}
 			.dm{width:70%;height:500px;background:rgba(4, 17, 27,0.28);margin:-59px auto;position:absolute;top:59px;left:0;z-index:88;}
 			.dm_show{color:white;position:relative;}
@@ -37,8 +39,10 @@
 <body>
 	<h1>视频弹幕</h1>		
     <div class="box">
+    <embed class="mp4" src="bullet_screen/【琅琊榜英文】仿英文预告大片_英之驿3-12岁国际少儿英语_高清.mp4">
         <div class="bg_video">
             还记得你的梦想吗？？？
+            
         </div>
 		 <a href="javascript:say('这是弹幕展开！')" class="s_dm">弹幕</a>
 		 <!--弹幕START-->
